team-14/frontend/openshift/resources/deployment.yml
apiVersion: v1
kind: List
items:
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      haproxy.router.openshift.io/timeout: 4m
      template.openshift.io/expose-uri: https://{.spec.host}{.spec.path}
    labels:
      app: KN-translator
      jenkins: translator-frontend
      template: translator-frontend-template
    name: translator-frontend
  spec:
    host: "hackathon-2021-translator.int.kn"
    tls:
      insecureEdgeTerminationPolicy: Redirect
      termination: edge
    to:
      kind: Service
      name: translator-frontend
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      template.alpha.openshift.io/wait-for-ready: "true"
    labels:
      app: KN-translator
      template: translator-frontend-template
    name: translator-frontend
  spec:
    replicas: 1
    selector:
      name: translator-frontend
    strategy:
      type: Recreate
      recreateParams:
        timeoutSeconds: 1200
    template:
      metadata:
        labels:
          name: translator-frontend
      spec:
        containers:
          # add the image to the repository
        - image: docker-registry.default.svc:5000/cp-388868/translator-frontend:latest
          imagePullPolicy: Always
          livenessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            httpGet:
              path: /health
              port: 8080
            timeoutSeconds: 60
          name: translator-frontend
          readinessProbe:
            initialDelaySeconds: 60
            periodSeconds: 60
            successThreshold: 1
            httpGet:
              path: /health
              port: 8080
            timeoutSeconds: 60
          resources:
            limits:
              cpu: 500m
              memory: 256Mi
            requests:
              cpu: 64m
              memory: 128Mi
          securityContext:
            privileged: false
          terminationMessagePath: /dev/termination-log
        dnsPolicy: ClusterFirst
        restartPolicy: Always
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      service.openshift.io/infrastructure: "true"
    labels:
      app: KN-translator
      template: translator-frontend-template
    name: translator-frontend
  spec:
    ports:
    - name: web
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      name: translator-frontend
    sessionAffinity: None
    type: ClusterIP
